[gd_scene format=3 uid="uid://dthd504tsfau0"]

[ext_resource type="Script" uid="uid://da4xrb2sta4mk" path="res://Scenes/ui.gd" id="1_jxero"]

[node name="UI" type="CanvasLayer" unique_id=1824958648]
script = ExtResource("1_jxero")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=2116169978]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -197.0
offset_top = 51.0
offset_right = -60.0
offset_bottom = 101.0
grow_horizontal = 0

[node name="ScoreLabel" type="Label" parent="VBoxContainer" unique_id=1996808414]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 2
vertical_alignment = 2

[node name="TimeLabel" type="Label" parent="VBoxContainer" unique_id=1097588379]
layout_mode = 2
text = "Time: 0"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="." unique_id=566298641]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
